# X11

./: X11.cabal
Graphics/X11/: XScreenSaver.hsc
